styles.css
body {
    margin: 0;
    overflow-y: scroll;
    overflow-x: hidden;
    background-color: #15202B;
    background-size: 100%;
}

.bottom-container {
    width: 100%;
    height: 40vh;
}
/*Container*/
.card-container {
    margin-left: 10%;
    margin-top: 5%;
    width: 80%;
    height: auto;
    display: grid;
    grid-template-columns: repeat(2, 1fr); /* Changed here */
    gap: 60px 20px;
    justify-content: center;
    align-items: start;
}

.maincard-container {
    position: relative;
    width: 100%;
    height: 45vh;
    z-index: 100;
    padding-bottom: 0%;
    overflow: visible;
}

.screen-container{
    width: cover;
    height: cover;
    position: fixed;
    z-index: 5;
}

img {
    width: 100%;
    height: 100%;
    object-fit: cover;
    border-radius: 10px;
}

.maincard .moving-image-maincard {
    background: url('images/overlay.png') repeat;
    z-index: 1;
    position: absolute;
    top: 0;
    left: 0;
    width: 500%;
    height: 500%;
    opacity: 0.8;
    animation: moveImageMaincard 100s linear infinite;
    background-size: cover;
}

@keyframes moveImageMaincard {
    0% {
        transform: translate(0, 0);
    }
    50% {
        transform: translate(-25%, -25%);
    }
    100% {
        transform: translate(0, 0);
    }
}

/*Container ends here*/

.container {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    gap: 0px;
  }
  
  .box {
    height: auto;
    display: flex;
    justify-content: center;
    border-style: dashed;
    align-items: center;
    margin: 5px;
    padding: 5px;
    text-align: center;
    border-radius: 20%;
  }


/* Card Display */
/* General Card Styling */
.card {
    position: relative;
    width: 80%;
    height: 200%;
    margin: 20px 20px 40px 20px;
    box-sizing: border-box;
    overflow: hidden;
    transition: transform 0.3s ease; 
}

.card-title {
    text-align: center;
    color: white;
    font-size: 1.5em;
    font-weight: bold;
    padding: 10px;
    border-radius: 10px 10px 0 0;
}

.card:hover {
    transform: scale(1.05);
    z-index: 2;
}

.maincard .aboutmetext{
    text-align: center;
    position: relative;
    cursor: pointer;
}
.card .overlay-image-engine {
    position: absolute;
    top: 20%;
    left: 80%;
    transform: translate(-50%, -50%);
    opacity: 1;
    transition: opacity 0.3s ease-in-out;
    width: 60px;
    height: auto;
    border-radius: 30%;
    z-index: 1;
}

.card .overlay-image-available {
    position: absolute;
    top: 20%;
    left: 20%;
    transform: translate(-50%, -50%);
    opacity: 1;
    transition: opacity 0.3s ease-in-out;
    width: 60px;
    height: auto;
    border-radius: 30%;
    z-index: 1;
}


.maincard .portrait{
    position: absolute;
    top: 50%;
    left: 20%;
    transform: translate(-50%, -50%);
    width: 16%;
    height: auto;
    border-radius: 100%;
    box-shadow: 0 0 20px rgba(0, 0, 0, 0.6);
    outline: 3px dashed #be9351;
    z-index: 2;
}

.overlay-text-visible {
    position: absolute;
    border-radius: 10px;
    width: 40%;
    top: 50%;
    left: 65%;
    transform: translate(-75%, -50%);
    color: white;
    font-size: 20px;
    font-weight: bold;
    text-wrap:balance;
    z-index: 1;
    text-align: left;
    padding-left: 10%;
}

.overlay-text{
    color: white;
    padding: 5%;
}

.screen-container .overlay-image-socials{
    position: fixed;
    top: 90%;
    left: 90%;
    width: 100px;
    height: auto;
}

.corner-container {
    position: fixed;
    top: 0;
    right: 0;
    border-radius: 2vh;
    padding: 60px;
    font-size: medium;
    z-index: 1000;
  }
  
  .hover-text {
    transition: transform 0.3s ease;
    display: inline-block;
    text-decoration: none;
    cursor: pointer;
  }
  
  .hover-text:hover {
    transform: scale(1.1) rotate(-7deg);
  }

.card .hover-gif {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    width: 100%;
    padding: 1%;
    height: cover;
    opacity: 0;
    transition: opacity 0.05s ease-in-out;
}

/*TIMELINE*/

.timeline {
    display: flex;
    justify-content: center;
    position: relative;
    bottom: 0;
    top: 50%;
    gap: 8%;
    left: 50%;
    transform: translateX(-50%);
}

.timeline::before {
    content: '';
    position: absolute;
    top: 50%;
    left: 0;
    right: 0;
    height: 2px;
    background: white;
    transform: translateY(-50%);
}

.project {
    position: relative;
    display: flex;
    flex-direction: column;
    align-items: center;
}

.project img {
    width: 50px;
    height: 50px;
    border-radius: 50%;
    transition: transform 0.3s ease, box-shadow 0.3s ease;
    transform: scale(3);
    z-index: 2;
    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.4);
    outline: 1px dashed white;
    
    object-fit: cover;
}

.project:hover img {
    transform: scale(3.5);
    z-index: 5;
}

.project::after {
    content: '';
    position: absolute;
    left: 50%;
    width: 2px;
    background: #dedede;
    transform: translateX(-50%);
}

.text-area {
    position: absolute;
    width: 200px;
    border-radius: 8px;
    text-align: center;
    top: calc(100% + 20px);
    left: 50%;
    color: white;
    transform: translateX(-50%);
    z-index: 1;
}

.project:nth-child(odd) .text-area {
    top: auto;
    bottom: calc(100% + 40px);
}

.project:nth-child(even) .text-area {
    top: calc(100% + 40px);
}

.project:nth-child(odd) {
    margin-top: 150px;
}

.project:nth-child(odd)::after {
    bottom: 20px;
    height: 80px;
    content: ' ';
}

.project:nth-child(even) {
    margin-bottom: 150px;
}

.project:nth-child(even)::after {
    top: 20px;
    height: 80px;
}

.project:nth-child(even) img {
    transform-origin: bottom;
}

.project:nth-child(odd) img {
    transform-origin: top;
}

.timeline::after {
    content: '';
    position: absolute;
    top: 50%;
    right: -10px;
    width: 0;
    height: 0;
    border-top: 5px solid transparent;
    border-bottom: 5px solid transparent;
    border-left: 20px solid #e9e9e9;
    transform: translateY(-50%);
}

/*Card display ends here*/

/*Card hover*/
.card:hover .hover-gif {
    opacity: 1;
}

.card:hover .overlay-image-engine{
    opacity: 1;
}
.card:hover .overlay-image-available{
    opacity: 1;
}

.card:hover .overlay-text {
    opacity: 1;
}

.card:hover {
    z-index: 2;
    transform: scale(1.05);
    cursor: pointer;
}

/*Card hover ends here*/

/*Takes care of card size based on screen size*/

@media (max-width: 768px) {

    .overlay-image-engine {
        width: 50px;
    }

    .bottom-container {
        width: 100%;
        height: 25vh;
    }

    .maincard .portrait {
        width: 50%;
        left: 50%;
        top: 30%;
    }

    .overlay-text-visible{
        top: 70%;
        font-size: 15px;
        width: 60%;
    }

    .card-container {
        margin-top: 3%;
        grid-template-columns: repeat(1, 1fr);
        gap: 0px 20px;
    }

    .maincard-container{
        height: 90vh;
    }
    .card .overlay-image-available{
        width: 45px;
        top: 15%;
    }

    .card .overlay-image-engine {
        width: 45px;
        top: 15%;
    }

    .corner-container {
        top: 70%;
        padding: 60px;
      }

}

@media (min-width: 769px) and (max-width: 1024px) {
}

@media (min-width: 1025px) {

}
/*ends here */

